force-app/main/default/objects/Sample_Products__c/Sample_Products__c.object-meta.xml
<CustomObject>
    <label>Sample Products</label>
    <nameField>
        <label>Sample Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>