force-app/main/default/objects/Sample_Products__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UL</fullName>
            </value>
            <value>
                <fullName>PB</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>PI,UL</fullName>
            </value>
            <value>
                <fullName>PP,UL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>