force-app/main/default/objects/Sample_Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Notes__c</columns>
    <columns>Product__c</columns>
    <columns>Size__c</columns>
    <columns>Type__c</columns>
    <columns>Market__c</columns>
    <columns>Category__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>